Ng resource is added

--- a/mytest/src/main/webapp/index.html
+++ b/mytest/src/main/webapp/index.html
@@ -504,7 +504,11 @@
 
         <!-- add new calendar event modal -->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-resource.js"></script>
+  
 	<script type="text/javascript" src="resources/js/app.js"></script>
 	<script type="text/javascript" src="resources/js/services.js"></script>
 	<script type="text/javascript" src="resources/js/controller.js"></script>
