--- a/mytest/src/main/webapp/resources/pages/category.html
+++ b/mytest/src/main/webapp/resources/pages/category.html
@@ -1,58 +1,140 @@
-            <!-- Right side column. Contains the navbar and content of the page -->
-            <aside class="right-side">                
-                <!-- Content Header (Page header) -->
-                <section class="content-header">
-                    <h1>
-                        Blank page
-                        <small>it all starts here</small>
-                    </h1>
-                    <ol class="breadcrumb">
-                        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                        <li><a href="#">Examples</a></li>
-                        <li class="active">Blank page</li>
-                    </ol>
-                </section>
 
-                <!-- Main content -->
-                <section class="content">
-                	<div class="row">
-                		<div class="col-md-6">
-                            <!-- general form elements disabled -->
-                            <div class="box box-warning">
+<!-- Right side column. Contains the navbar and content of the page -->
+<aside class="right-side">
+	<!-- Content Header (Page header) -->
+	<section class="content-header">
+		<h1>
+			Blank page <small>it all starts here</small>
+		</h1>
+		<ol class="breadcrumb">
+			<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+			<li><a href="#">Examples</a></li>
+			<li class="active">Blank page</li>
+		</ol>
+	</section>
+	<!-- Button trigger modal -->
+
+
+
+	<!-- Main content -->
+	<section class="content" >
+		<div  ng-controller="myController">
+			 <button ng-click="getCategory()">get</button>
+	 
+		<button type="button" class="btn btn-primary btn-lg"
+			data-toggle="modal" data-target="#myModal">Launch demo modal
+		</button>
+		
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+			aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Add Category</h4>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<div class="col-md-12">
+								<!-- general form elements disabled -->
+								<div class="box box-warning">
+									<div class="box-header">
+										<h3 class="box-title">Enter The Category Details </h3>
+									</div>
+									<!-- /.box-header -->
+									<div class="box-body">
+										<form role="form">
+											<!-- text input -->
+											<div class="form-group">
+												<label>Name</label> <input type="text" class="form-control"
+													placeholder="Enter ..." />
+											</div>
+											<!-- select -->
+											<div class="form-group">
+												<label>Select</label> <select class="form-control">
+													<option>option 1</option>
+													<option>option 2</option>
+													<option>option 3</option>
+													<option>option 4</option>
+													<option>option 5</option>
+												</select>
+											</div>
+											<!-- textarea -->
+											<div class="form-group">
+												<label>description</label>
+												<textarea class="form-control" rows="3"
+													placeholder="Enter ..."></textarea>
+											</div>
+										</form>
+									</div>
+									<!-- /.box-body -->
+								</div>
+								<!-- /.box -->
+							</div>
+							<!--/.col (right) -->
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary">Save
+							changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!--/table code -->
+		        <div class="row">
+                     <div class="col-md-12">
+                            <div class="box">
                                 <div class="box-header">
-                                    <h3 class="box-title">Add Category</h3>
+                               <h3 class="box-title">Bordered Table</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
-                                    <form role="form">
-                                        <!-- text input -->
-                                        <div class="form-group">
-                                            <label>Name</label>
-                                            <input type="text" class="form-control" placeholder="Enter ..."/>
-                                        </div>
-                                         <!-- select -->
-                                        <div class="form-group">
-                                            <label>Select</label>
-                                            <select class="form-control">
-                                                <option>option 1</option>
-                                                <option>option 2</option>
-                                                <option>option 3</option>
-                                                <option>option 4</option>
-                                                <option>option 5</option>
-                                            </select>
-                                        </div>     
-                                        <!-- textarea -->
-                                        <div class="form-group">
-                                            <label>description</label>
-                                            <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
-                                        </div>
-                                    </form>
+                                    <table class="table table-bordered">
+                                        <tr>
+                                            <th style="width: 10px">#</th>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                            <th>imgUrl</th>
+                                            <th>active</th>
+                                            <th style="width: 40px">
+                                            	Edit
+                                            </th>
+                                        </tr>
+                                        <tr ng-repeat="category in categorys.data">
+                                            <td>{{category.pkId}}</td>
+                                            <td>{{category.name}}</td>
+                                            <td>{{category.description}}</td>
+                                            <td>{{category.imgUrl}}</td>
+                                            <td>{{category.active}}</td>
+                                            <td><span class="badge bg-red"><i class="fa fa-fw fa-edit"></i></span></td>
+                                        </tr>
+                                    </table>
                                 </div><!-- /.box-body -->
+                                <div class="box-footer clearfix">
+                                    <ul class="pagination pagination-sm no-margin pull-right">
+                                        <li><a href="#">&laquo;</a></li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">&raquo;</a></li>
+                                    </ul>
+                                </div>
                             </div><!-- /.box -->
-                        </div><!--/.col (right) -->
-                	</div>
-                </section><!-- /.content -->
-            </aside><!-- /.right-side -->
- 
+                        </div><!-- /.col -->
+                </div>
+             </div>
+	</section>
+	<!-- /.content -->
+</aside>
+<!-- /.right-side -->
+
+
 
 
 
