--- a/mytest/src/main/webapp/resources/pages/tables/simple.html
+++ b/mytest/src/main/webapp/resources/pages/tables/simple.html
@@ -402,11 +402,11 @@
 
                 <!-- Main content -->
                 <section class="content">
-                    <div class="row">
-                        <div class="col-md-6">
+           --         <div class="row">
+                     <div class="col-md-6">
                             <div class="box">
                                 <div class="box-header">
-                                    <h3 class="box-title">Bordered Table</h3>
+                               <h3 class="box-title">Bordered Table</h3>
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
                                     <table class="table table-bordered">
