--- a/mytest/src/main/webapp/resources/pages/category.html
+++ b/mytest/src/main/webapp/resources/pages/category.html
@@ -19,10 +19,7 @@
 	<!-- Main content -->
 	<section class="content" >
 		<div  ng-controller="myController">
-			 <button ng-click="getCategory()">get</button>
-	 
-		<button type="button" class="btn btn-primary btn-lg"
-			data-toggle="modal" data-target="#myModal">Launch demo modal
+		<button type="button" class="btn btn-primary btn-lg"  ng-click="openModal()">Add Category
 		</button>
 		
 		<!-- Modal -->
@@ -42,16 +39,33 @@
 							<div class="col-md-12">
 								<!-- general form elements disabled -->
 								<div class="box box-warning">
-									<div class="box-header">
-										<h3 class="box-title">Enter The Category Details </h3>
+									<div class="box-header"></br>
+											<div class="alert alert-success alert-dismissible" ng-show="categorySaved!==null">
+										      <a href="javascript:void()" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+										      <strong>Success!</strong> {{categorySaved}}
+										  </div>
+										<div ng-show="showErrors">
+											<h5  ng-repeat="error in errors" style="color:red;">{{error.title}}</h5>
+										</div>
 									</div>
 									<!-- /.box-header -->
 									<div class="box-body">
-										<form role="form">
-											<!-- text input -->
+										<form role="form" name="categoryForm" ng-submit="saveOrUpdateCategory(category.pkId)" >
+											<!-- Namet -->
 											<div class="form-group">
-												<label>Name</label> <input type="text" class="form-control"
-													placeholder="Enter ..." />
+												<label>Name</label> <input type="text" class="form-control" name="categoryName"
+												 ng-model ="category.name" placeholder="Enter ..."  required/>
+												 <span style="color:red" ng-show="categoryForm.categoryName.$dirty && categoryForm.categoryName.$invalid">
+												  <span ng-show="categoryForm.categoryName.$error.required">Category name is required.</span>
+													</span>
+											</div>
+											<!-- Img url -->
+											<div class="form-group">
+												<label>Img url</label> <input type="text" class="form-control" name="imageUrl"
+												 ng-model ="category.imgUrl" placeholder="Enter ..." / required>
+												 <span style="color:red" ng-show="categoryForm.imageUrl.$dirty && categoryForm.imageUrl.$invalid">
+												  <span ng-show="categoryForm.imageUrl.$error.required">image Url name is required.</span>
+												</span>
 											</div>
 											<!-- select -->
 											<div class="form-group">
@@ -66,8 +80,15 @@
 											<!-- textarea -->
 											<div class="form-group">
 												<label>description</label>
-												<textarea class="form-control" rows="3"
-													placeholder="Enter ..."></textarea>
+												<textarea class="form-control" rows="3" ng-model ="category.description"
+													placeholder="Enter ..." name="description" required></textarea>
+												 <span style="color:red" ng-show="categoryForm.description.$dirty && categoryForm.description.$invalid">
+												  <span ng-show="categoryForm.description.$error.required">image Url name is required.</span>
+												</span>
+											  </div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+												<button type="submit" class="btn btn-primary"  ng-disabled="categoryForm.$invalid">Savechanges</button>
 											</div>
 										</form>
 									</div>
@@ -78,15 +99,9 @@
 							<!--/.col (right) -->
 						</div>
 					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save
-							changes</button>
-					</div>
 				</div>
 			</div>
 		</div>
-		
 		<!--/table code -->
 		        <div class="row">
                      <div class="col-md-12">
@@ -102,8 +117,11 @@
                                             <th>Description</th>
                                             <th>imgUrl</th>
                                             <th>active</th>
-                                            <th style="width: 40px">
+                                            <th style="width: 40px"  >
                                             	Edit
+                                            </th>
+                                            <th style="width: 40px"  >
+                                            	Delete
                                             </th>
                                         </tr>
                                         <tr ng-repeat="category in categorys.data">
@@ -112,7 +130,16 @@
                                             <td>{{category.description}}</td>
                                             <td>{{category.imgUrl}}</td>
                                             <td>{{category.active}}</td>
-                                            <td><span class="badge bg-red"><i class="fa fa-fw fa-edit"></i></span></td>
+                                            <td>
+                                              <a href="javascript:void()"> 
+                                            <span class="badge bg-red"><i class="fa fa-fw fa-edit" ng-click="edit(category)">
+                                            </i></span> </a>
+                                            </td>
+                                             <td>
+                                              <a href="javascript:void()"> 
+                                            <span class="badge bg-red"><i class="glyphicon glyphicon-trash" ng-click="deleteCategory(category.pkId)">
+                                            </i></span> </a>
+                                            </td>
                                         </tr>
                                     </table>
                                 </div><!-- /.box-body -->
